<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity"
        android:orientation="vertical"
        android:background="@color/colorBackMain">

        <TextView
                android:id="@+id/game_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:padding="40dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/start_new_button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/new_game"
                android:textSize="@dimen/menu_button_text_size"
                android:textColor="@color/colorLight"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:background="@color/colorOk"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/continue_button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="Слова"
                android:textSize="@dimen/menu_button_text_size"
                android:textColor="@color/colorLight"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:background="@color/colorOk"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/rules_button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="@dimen/menu_button_text_size"
                android:textColor="@color/colorLight"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:background="@color/colorOk"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/help_button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="@dimen/menu_button_text_size"
                android:textColor="@color/colorLight"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:background="@color/colorOk"/>

</LinearLayout>