<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.RoundActivity"
        android:orientation="vertical"
        android:background="@color/colorBackMain">

    <TextView
            android:id="@+id/round_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_end"
            android:textSize="30sp"
            android:layout_margin="60dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="22dp">

        <TextView
                android:id="@+id/team_turn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players_score"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/date/ddmmyy"
                android:textSize="35sp"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:textSize="20sp"
            android:textColor="@color/colorTextDark"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="20dp"
            android:background="@color/colorOk"/>

</LinearLayout>