<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.RoundActivity"
        android:orientation="vertical"
        android:background="@color/colorBackMain">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp">

        <TextView
                android:id="@+id/head_words_qnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words_quantity"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/words_qnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/date/hhmm"
                android:textSize="35sp"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="@dimen/activity_padding_8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_for_turn"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/activity_padding_8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/time_for_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_padding_8dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                tools:text="@tools:sample/date/hhmm"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </LinearLayout>

    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_seekBar"
            android:layout_marginStart="@dimen/activity_padding_8dp"
            android:layout_marginEnd="@dimen/activity_padding_8dp"
            android:max="100"
            android:progress="10"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="@dimen/activity_padding_8dp"
            android:layout_marginBottom="@dimen/activity_padding_8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_qauntity"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/activity_padding_8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/skip_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_padding_8dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                tools:text="@tools:sample/date/hhmm"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </LinearLayout>

    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skip_seekBar"
            android:layout_marginStart="@dimen/activity_padding_8dp"
            android:layout_marginEnd="@dimen/activity_padding_8dp"
            android:max="20"
            android:progress="1"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_game_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp"
            android:textColor="@color/colorTextDark"
            android:layout_marginTop="22dp"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@color/colorOk"/>


</LinearLayout>