<?xml version="1.0" encoding="utf-8"?>

<FrameLayout

        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_round"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackMain"
>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <TextView
                android:id="@+id/fragment_round_text_view_words_left2"
                android:layout_width="match_parent"
                android:text="Слов"
                android:textColor="@color/colorTextDark"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:padding="@dimen/activity_padding_8dp"
                android:layout_height="wrap_content"/>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/fragment_round_text_view_words_left"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextDark"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:padding="@dimen/activity_padding_8dp"
                    tools:text="@tools:sample/cities"/>
            <TextView
                    android:id="@+id/fragment_round_text_view_words_guessed"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextDark"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:padding="@dimen/activity_padding_8dp"
                    tools:text="@tools:sample/cities"/>
        </LinearLayout>

        <TextView
                android:id="@+id/fragment_round_text_view_skips"
                android:layout_width="match_parent"
                tools:text="@tools:sample/cities"
                android:textColor="@color/colorTextDark"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:padding="@dimen/activity_padding_8dp"
                android:layout_height="wrap_content"/>

        <include layout="@layout/progress_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
        </include>

        <TextView
                android:id="@+id/word_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_example"
                android:textSize="35sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_padding_8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/ok_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button_ok"
                android:textSize="20sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginTop="@dimen/activity_padding_8dp"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:background="@color/colorOk"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/skip_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/button_skip"
                android:textSize="20sp"
                android:textColor="@color/colorTextDark"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:background="@color/colorWrong"/>

    </LinearLayout>
</FrameLayout>